2008-03-07 [colin]	3.3.1cvs18

	* src/mainwindow.c
		MAEMO: Fix bug 1494, 'Trayicon 
		plugin breaks UI...'

2008-03-07 [paul]	3.3.1cvs17

	* src/gtk/authors.h
		reflect reality a bit more closely

2008-03-06 [colin]	3.3.1cvs16

	* src/mainwindow.c
	* src/mainwindow.h
	* src/summaryview.c
	* src/summaryview.h
	* src/toolbar.c
		Integrate things better wrt the new
		summaryview extensibility.

2008-03-06 [wwp]	3.3.1cvs15

	* src/quote_fmt.c
		Fix some gcc warnings.

2008-03-06 [wwp]	3.3.1cvs14

	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_gtk.c
	* src/prefs_template.c
	* src/gtk/prefswindow.c
	* src/gtk/prefswindow.h
		prefs_templates: fix missing unregistering of addr_completion widgets
		and and ending of addr_completion service.
		prefs_folder_item: fix missing registering/unregistering of widgets,
		and rework the way add_completion service is started and stopped.
		Plus few prefswindow API changes (opening).

2008-03-06 [wwp]	3.3.1cvs13

	* src/folder_item_prefs.c
	* src/prefs_template.c
	* src/prefs_template.h
	* src/quote_fmt.c
	* src/common/template.c
		Complete 3.3.1cvs12, thanks to Colin.

2008-03-06 [wwp]	3.3.1cvs12

	* src/compose.c
	* src/folder_item_prefs.c
	* src/folder_item_prefs.h
	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_quote.c
	* src/prefs_template.c
	* src/quote_fmt.c
	* src/quote_fmt.h
	* src/common/template.c
	* src/common/template.h
		Global and per-folder templates can now override the from name (this
		doesn't change the account being used).
		Examples:
		 "My other name" <%account_email> (just changes the name)
		 my.faked.email@address.org (overrides the address too)

2008-03-05 [colin]	3.3.1cvs11

	* src/summaryview.c
	* src/summaryview.h
		Replace that hbox with a notebook

2008-03-05 [colin]	3.3.1cvs10

	* src/folder.h
	* src/folderview.c
		Add klass functions for notification of folder
		opening/closing via the GUI
	* src/summaryview.c
	* src/summaryview.h