@@ -3253,3 +3253,4 @@
 ( cvs diff -u -r 1.274.2.233 -r 1.274.2.234 src/mainwindow.c;  cvs diff -u -r 1.39.2.43 -r 1.39.2.44 src/mainwindow.h;  cvs diff -u -r 1.395.2.357 -r 1.395.2.358 src/summaryview.c;  cvs diff -u -r 1.68.2.44 -r 1.68.2.45 src/summaryview.h;  cvs diff -u -r 1.43.2.95 -r 1.43.2.96 src/toolbar.c;  ) > 3.3.1cvs16.patchset
 ( cvs diff -u -r 1.1.2.46 -r 1.1.2.47 src/gtk/authors.h;  ) > 3.3.1cvs17.patchset
 ( cvs diff -u -r 1.274.2.234 -r 1.274.2.235 src/mainwindow.c;  ) > 3.3.1cvs18.patchset
+( cvs diff -u -r 1.274.2.235 -r 1.274.2.236 src/mainwindow.c;  ) > 3.3.1cvs19.patchset
