@@ -1,3 +1,8 @@
+2008-03-07 [colin]	3.3.1cvs19
+
+	* src/mainwindow.c
+		Fix blinking of the taskbar entry
+
 2008-03-07 [colin]	3.3.1cvs18
 
 	* src/mainwindow.c
